[package]
name = "fluuid"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg_test = []

[dependencies]
pgx = { version = "0.1.21", git = "https://github.com/kpumuk/pgx", branch = "uuid" }
pgx-macros = "0.1.21"
uuid = { version = "0.8.2", features = ["v1", "v4"] }
getrandom = "0.2.0"

[dev-dependencies]
pgx-tests = "0.1.21"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
